Navbar is now fixed, colored blue, and is collapsable.

--- a/mileage_tracker/static/css/style.css
+++ b/mileage_tracker/static/css/style.css
@@ -4,11 +4,11 @@
     background: linear-gradient(to right, #3a6073, #3a7bd5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-.nav-fixed {
+/* .nav-fixed {
     position: fixed;
     top: 0;
     left: 0;
-}
+} */
 
 .mt-25 {
     margin-top: 25px;
